[gd_scene load_steps=20 format=2]

[ext_resource path="res://sprites/character/prota_test/player_one.png" type="Texture" id=1]
[ext_resource path="res://data/player/states/machine.gd" type="Script" id=2]
[ext_resource path="res://data/player/player.gd" type="Script" id=3]
[ext_resource path="res://data/player/states/idle.gd" type="Script" id=4]
[ext_resource path="res://data/player/states/walk.gd" type="Script" id=5]
[ext_resource path="res://data/player/states/jump.gd" type="Script" id=6]
[ext_resource path="res://sprites/player/noah/noah_1s.png" type="Texture" id=10]
[ext_resource path="res://data/player/states/hold.gd" type="Script" id=12]
[ext_resource path="res://streams/sfx/player/asb_fire.wav" type="AudioStream" id=16]
[ext_resource path="res://data/player/player_number.gd" type="Script" id=18]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 10 )
region = Rect2( 86, 18, 38, 51 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 10 )
region = Rect2( 211, 18, 84, 58 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 10 )
region = Rect2( 143, 16, 21, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 10 )
region = Rect2( 171, 12, 21, 35 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 10 )
region = Rect2( 19, 12, 55, 74 )

[sub_resource type="Animation" id=11]
resource_name = "Hold"

[sub_resource type="Animation" id=12]
resource_name = "Idle"

[sub_resource type="Animation" id=13]
resource_name = "Walking"

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 30, 72 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_mask = 60
script = ExtResource( 3 )

[node name="Graphics" type="Node2D" parent="."]
scale = Vector2( 1, 1 )

[node name="Body" type="Sprite" parent="Graphics"]
texture = SubResource( 10 )

[node name="Head" type="Sprite" parent="Graphics/Body"]
position = Vector2( 4, -44 )
texture = SubResource( 2 )

[node name="RightArm" type="Sprite" parent="Graphics/Body"]
position = Vector2( 16, 4 )
z_index = -1
texture = SubResource( 9 )

[node name="LeftArm" type="Sprite" parent="Graphics/Body"]
position = Vector2( -19, 0 )
texture = SubResource( 3 )

[node name="Legs" type="Sprite" parent="Graphics/Body"]
position = Vector2( 4, 48 )
z_index = -1
texture = SubResource( 4 )

[node name="ArmsPosition" type="Position2D" parent="Graphics/Body"]
position = Vector2( 24, 8 )
scale = Vector2( 0.8, 1.33333 )
__meta__ = {
"_gizmo_extents_": 32.0
}

[node name="PlayerNumber" type="Sprite" parent="Graphics"]
position = Vector2( 0, -120 )
texture = ExtResource( 1 )
script = ExtResource( 18 )

[node name="PlayerAnimator" type="AnimationPlayer" parent="Graphics"]
playback_process_mode = 0
anims/Hold = SubResource( 11 )
anims/Idle = SubResource( 12 )
anims/Walking = SubResource( 13 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
START_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Hold" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
shape = SubResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_smoothed = true
smoothing_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FiringSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
